--- a/M2Task9.1/MainWindow.xaml
+++ b/M2Task9.1/MainWindow.xaml
@@ -32,8 +32,8 @@
         </Menu>
         <ToolBarTray Grid.Row="1" Grid.RowSpan="3" Style = "{DynamicResource TextBoxStyle}" Height="65" VerticalAlignment="Top">
             <ToolBar Margin="5" Padding="5" >
-                <ComboBox ItemsSource = "{StaticResource font_family}" Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged"/>
-                <ComboBox ItemsSource = "{StaticResource font_size}" Margin="5" Padding="5" SelectedIndex="1" Width="50" SelectionChanged="ComboBox_SelectionChanged_1"/>
+                <ComboBox x:Name="family" ItemsSource = "{StaticResource font_family}" Margin="5" Padding="5" SelectedIndex="0" Width="200"/>
+                <ComboBox x:Name="size" ItemsSource = "{StaticResource font_size}" Margin="5" Padding="5" SelectedIndex="1" Width="50"/>
             </ToolBar>
             <ToolBar Margin="5" Padding="5">
                 <Button Click="Button_Click">
@@ -55,6 +55,10 @@
                 </StackPanel>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBox" Style = "{DynamicResource TextBoxStyle}"  Grid.Row="3" Margin="5,5,5,5" Padding="5" FontSize="16" FontFamily="Arial" TextWrapping="Wrap"/>
+        <TextBox x:Name="textBox" Style = "{DynamicResource TextBoxStyle}" Grid.Row="3" Margin="5,5,5,5" Padding="5" TextWrapping="Wrap"
+                 FontFamily="{Binding ElementName=family, Path=Text}" 
+                 FontSize="{Binding ElementName=size, Path=Text}"/>
+                 
+                 
     </Grid>
 </Window>
